<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FizzBuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Vae-gx-xmo">
                                <rect key="frame" x="100" y="246" width="175" height="175"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="wiA-Ai-QX5">
                                        <rect key="frame" x="0.0" y="0.0" width="72.5" height="175"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYe-b2-VCW">
                                                <rect key="frame" x="0.0" y="0.0" width="72.5" height="72.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="count"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <state key="normal" title="+1"/>
                                                <connections>
                                                    <action selector="numberButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPJ-h3-BD1"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ds8-PS-v1H">
                                                <rect key="frame" x="0.0" y="102.5" width="72.5" height="72.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="buzz"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <state key="normal" title="Buzz"/>
                                                <connections>
                                                    <action selector="buzzButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jCU-5x-s42"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="Ds8-PS-v1H" firstAttribute="height" secondItem="RYe-b2-VCW" secondAttribute="height" id="4RX-fA-GcL"/>
                                            <constraint firstItem="Ds8-PS-v1H" firstAttribute="width" secondItem="RYe-b2-VCW" secondAttribute="width" id="YZI-9b-6Gf"/>
                                        </constraints>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="AaT-rk-jKc">
                                        <rect key="frame" x="102.5" y="0.0" width="72.5" height="175"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEP-nW-L5M">
                                                <rect key="frame" x="0.0" y="0.0" width="72.5" height="72.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fizz"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <state key="normal" title="Fizz"/>
                                                <connections>
                                                    <action selector="fizzButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nre-Z5-bFS"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="daZ-k9-SzP">
                                                <rect key="frame" x="0.0" y="102.5" width="72.5" height="72.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fizzBuzz"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="daZ-k9-SzP" secondAttribute="height" multiplier="1:1" id="2Nr-KC-ODU"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                                <state key="normal" title="FizzBuzz"/>
                                                <connections>
                                                    <action selector="fizzBuzzButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0sv-5I-R0I"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="zEP-nW-L5M" firstAttribute="height" secondItem="RYe-b2-VCW" secondAttribute="height" id="UNo-dS-4Se"/>
                                    <constraint firstItem="daZ-k9-SzP" firstAttribute="width" secondItem="RYe-b2-VCW" secondAttribute="width" id="gBt-D6-xDA"/>
                                    <constraint firstItem="zEP-nW-L5M" firstAttribute="width" secondItem="RYe-b2-VCW" secondAttribute="width" id="he1-NP-ebK"/>
                                    <constraint firstItem="daZ-k9-SzP" firstAttribute="height" secondItem="RYe-b2-VCW" secondAttribute="height" id="onP-ve-KRA"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MhH-rn-SZt">
                                <rect key="frame" x="121" y="100" width="134.5" height="66"/>
                                <accessibility key="accessibilityConfiguration" identifier="score"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="55"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HighScore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C72-Pj-LYV">
                                <rect key="frame" x="281" y="637" width="84" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="highScore"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJ5-3T-eD0">
                                <rect key="frame" x="0.0" y="626" width="66" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="reset"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Reset"/>
                                <connections>
                                    <action selector="resetButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yGo-ly-e2x"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="MhH-rn-SZt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="2Lg-8l-wnE"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xJ5-3T-eD0" secondAttribute="bottom" id="81e-Ox-XHc"/>
                            <constraint firstItem="MhH-rn-SZt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="DYF-lx-Yae"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="C72-Pj-LYV" secondAttribute="bottom" constant="10" id="PbT-rA-XEV"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Vae-gx-xmo" secondAttribute="trailing" constant="10" id="TIr-6U-AqV"/>
                            <constraint firstItem="xJ5-3T-eD0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xyl-XR-pvW"/>
                            <constraint firstItem="Vae-gx-xmo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MhH-rn-SZt" secondAttribute="bottom" constant="80" id="ZKa-OC-JHa"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="MhH-rn-SZt" secondAttribute="trailing" constant="10" id="cv3-WE-iJr"/>
                            <constraint firstItem="C72-Pj-LYV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xJ5-3T-eD0" secondAttribute="trailing" constant="10" id="iLe-dl-q1N"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Vae-gx-xmo" secondAttribute="bottom" constant="10" id="ian-EU-IsN"/>
                            <constraint firstItem="Vae-gx-xmo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="n0k-nA-86w"/>
                            <constraint firstItem="MhH-rn-SZt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="n4w-DC-yoW"/>
                            <constraint firstItem="Vae-gx-xmo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="pGZ-d2-k2q"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="C72-Pj-LYV" secondAttribute="trailing" constant="10" id="rEo-jz-9OX"/>
                            <constraint firstItem="Vae-gx-xmo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ram-Vv-FFn"/>
                            <constraint firstItem="Vae-gx-xmo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vHy-fR-GdQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="Ds8-PS-v1H" id="QSM-5G-Qzd"/>
                        <outlet property="fizzButton" destination="zEP-nW-L5M" id="rFY-ex-eV4"/>
                        <outlet property="fizzBuzzButton" destination="daZ-k9-SzP" id="fiI-HB-wDD"/>
                        <outlet property="fizzBuzzLabel" destination="MhH-rn-SZt" id="sez-Jc-DfL"/>
                        <outlet property="highScoreLabel" destination="C72-Pj-LYV" id="Yqe-mn-ptH"/>
                        <outlet property="numberButton" destination="RYe-b2-VCW" id="9yZ-a8-f3L"/>
                        <outlet property="resetButton" destination="xJ5-3T-eD0" id="e9l-V4-sbu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
